graphics/include/neutron/graphics/scene.h

struct _NtSceneLayer;
/**
 * NtScene:
 * @instance: The %NtTypeInstance associated with this
 * @priv: Private data
 *
 * Scene for rendering layers
 */
typedef struct _NtScene {
  NtTypeInstance instance;

  /*< private >*/
  struct _NtScenePrivate* priv;
} NtScene;