graphics/lib/bindings.dart


  /// nt_shader_program_attach:
  /// @self: Instance of a shader program
  /// @shader: The shader to attach
  ///
  /// Attaches the shader to the program.
  ///
  /// Returns: %TRUE if the shader was added, %FALSE if it failed.
  bool nt_shader_program_attach(
    ffi.Pointer<NtShaderProgram> self,
    ffi.Pointer<NtShader> shader,
  ) {
    return _nt_shader_program_attach(
      self,
      shader,
    );
  }

  late final _nt_shader_program_attachPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<NtShaderProgram>,
              ffi.Pointer<NtShader>)>>('nt_shader_program_attach');
  late final _nt_shader_program_attach =
      _nt_shader_program_attachPtr.asFunction<
          bool Function(ffi.Pointer<NtShaderProgram>, ffi.Pointer<NtShader>)>();

  /// nt_shader_program_detach:
  /// @self: Instance of a shader program
  /// @shader: The shader to detach
  ///
  /// Detaches the shader to the program.
  ///
  /// Returns: %TRUE if the shader was removed, %FALSE if it failed.
  bool nt_shader_program_detach(
    ffi.Pointer<NtShaderProgram> self,
    ffi.Pointer<NtShader> shader,
  ) {
    return _nt_shader_program_detach(
      self,
      shader,
    );
  }

  late final _nt_shader_program_detachPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<NtShaderProgram>,
              ffi.Pointer<NtShader>)>>('nt_shader_program_detach');
  late final _nt_shader_program_detach =
      _nt_shader_program_detachPtr.asFunction<
          bool Function(ffi.Pointer<NtShaderProgram>, ffi.Pointer<NtShader>)>();

  /// nt_shader_program_link:
  /// @self: Instance of a shader program
  ///
  /// Links all the shaders together which makes the program usable.
  ///
  /// Returns: %TRUE if the shader program was linked, %FALSE if it failed.
  bool nt_shader_program_link(
    ffi.Pointer<NtShaderProgram> self,
  ) {
    return _nt_shader_program_link(
      self,
    );
  }

  late final _nt_shader_program_linkPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtShaderProgram>)>>(
      'nt_shader_program_link');
  late final _nt_shader_program_link = _nt_shader_program_linkPtr
      .asFunction<bool Function(ffi.Pointer<NtShaderProgram>)>();

  /// nt_shader_program_get_binary:
  /// @self: Instance of a shader program
  /// @len: Pointer for storing the length
  ///
  /// Used for getting the binary code of the shader program.
  ///
  /// Returns: An pointer of the binary
  ffi.Pointer<ffi.Void> nt_shader_program_get_binary(
    ffi.Pointer<NtShaderProgram> self,
    ffi.Pointer<ffi.Size> len,
  ) {
    return _nt_shader_program_get_binary(
      self,
      len,
    );
  }

  late final _nt_shader_program_get_binaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<NtShaderProgram>,
              ffi.Pointer<ffi.Size>)>>('nt_shader_program_get_binary');
  late final _nt_shader_program_get_binary =
      _nt_shader_program_get_binaryPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<NtShaderProgram>, ffi.Pointer<ffi.Size>)>();

  late final ffi.Pointer<ffi.Size> _NT_RENDERER_SIZE =
      _lookup<ffi.Size>('NT_RENDERER_SIZE');

  int get NT_RENDERER_SIZE => _NT_RENDERER_SIZE.value;

  set NT_RENDERER_SIZE(int value) => _NT_RENDERER_SIZE.value = value;

  ffi.Pointer<NtRenderer> NT_RENDERER(
    ffi.Pointer<_imp1.NtTypeInstance> instance,
  ) {
    return _NT_RENDERER(
      instance,
    );
  }

  late final _NT_RENDERERPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtRenderer> Function(
              ffi.Pointer<_imp1.NtTypeInstance>)>>('NT_RENDERER');
  late final _NT_RENDERER = _NT_RENDERERPtr.asFunction<
      ffi.Pointer<NtRenderer> Function(ffi.Pointer<_imp1.NtTypeInstance>)>();

  bool NT_IS_RENDERER(
    ffi.Pointer<NtRenderer> self,
  ) {
    return _NT_IS_RENDERER(
      self,
    );
  }

  late final _NT_IS_RENDERERPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtRenderer>)>>(
          'NT_IS_RENDERER');
  late final _NT_IS_RENDERER =
      _NT_IS_RENDERERPtr.asFunction<bool Function(ffi.Pointer<NtRenderer>)>();

  _imp1.NtType nt_renderer_get_type() {
    return _nt_renderer_get_type();
  }

  late final _nt_renderer_get_typePtr =
      _lookup<ffi.NativeFunction<_imp1.NtType Function()>>(
          'nt_renderer_get_type');
  late final _nt_renderer_get_type =
      _nt_renderer_get_typePtr.asFunction<_imp1.NtType Function()>();

  /// nt_renderer_is_software:
  /// @self: The %NtRenderer instance
  ///
  /// Gets whether or not the renderer is using software or hardware rendering.
  /// Returns: %true if the renderer is software rendering, %false if the renderer is hardware rendering
  bool nt_renderer_is_software(
    ffi.Pointer<NtRenderer> self,
  ) {
    return _nt_renderer_is_software(
      self,
    );
  }

  late final _nt_renderer_is_softwarePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtRenderer>)>>(
          'nt_renderer_is_software');
  late final _nt_renderer_is_software = _nt_renderer_is_softwarePtr
      .asFunction<bool Function(ffi.Pointer<NtRenderer>)>();

  /// nt_renderer_get_config:
  /// @self: The %NtRenderer instance
  ///
  /// Gets the renderer configuration for Flutter
  /// Returns: A pointer to the renderer configuration
  ffi.Pointer<FlutterRendererConfig> nt_renderer_get_config(
    ffi.Pointer<NtRenderer> self,
  ) {
    return _nt_renderer_get_config(
      self,
    );
  }

  late final _nt_renderer_get_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<FlutterRendererConfig> Function(
              ffi.Pointer<NtRenderer>)>>('nt_renderer_get_config');
  late final _nt_renderer_get_config = _nt_renderer_get_configPtr.asFunction<
      ffi.Pointer<FlutterRendererConfig> Function(ffi.Pointer<NtRenderer>)>();

  /// nt_renderer_get_compositor:
  /// @self: The %NtRenderer instance
  ///
  /// Gets the compositor for Flutter
  /// Returns: A pointer to the compositor
  ffi.Pointer<FlutterCompositor> nt_renderer_get_compositor(
    ffi.Pointer<NtRenderer> self,
  ) {
    return _nt_renderer_get_compositor(
      self,
    );
  }

  late final _nt_renderer_get_compositorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<FlutterCompositor> Function(
              ffi.Pointer<NtRenderer>)>>('nt_renderer_get_compositor');
  late final _nt_renderer_get_compositor =
      _nt_renderer_get_compositorPtr.asFunction<
          ffi.Pointer<FlutterCompositor> Function(ffi.Pointer<NtRenderer>)>();

  /// nt_renderer_wait_sync:
  /// @self: The %NtRenderer instance
  ///
  /// Causes the renderer to wait for any synchronization action.
  /// Use this before calling %nt_renderer_render.
  void nt_renderer_wait_sync(
    ffi.Pointer<NtRenderer> self,
  ) {
    return _nt_renderer_wait_sync(
      self,
    );
  }

  late final _nt_renderer_wait_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NtRenderer>)>>(
          'nt_renderer_wait_sync');
  late final _nt_renderer_wait_sync = _nt_renderer_wait_syncPtr
      .asFunction<void Function(ffi.Pointer<NtRenderer>)>();

  /// nt_renderer_render:
  /// @self: The %NtRenderer instance
  ///
  /// Causes the renderer to actually render.
  /// This does not use %nt_renderer_wait_sync so be sure to call it first.
  void nt_renderer_render(
    ffi.Pointer<NtRenderer> self,
  ) {
    return _nt_renderer_render(
      self,
    );
  }

  late final _nt_renderer_renderPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NtRenderer>)>>(
          'nt_renderer_render');
  late final _nt_renderer_render = _nt_renderer_renderPtr
      .asFunction<void Function(ffi.Pointer<NtRenderer>)>();
}

/// NtShaderKind:
/// @NT_SHADER_VERT: Vertex shader
/// @NT_SHADER_TESS: Tessellation shader
/// @NT_SHADER_GEOM: Geometry shader
/// @NT_SHADER_FRAG: Fragment shader
/// @NT_SHADER_COMP: Compute shader
///
/// The different kinds of shader
abstract class _NtShaderKind {
  static const int NT_SHADER_VERT = 0;
  static const int NT_SHADER_TESS = 1;
  static const int NT_SHADER_GEOM = 2;
  static const int NT_SHADER_FRAG = 3;
  static const int NT_SHADER_COMP = 4;
}

/// NtShader:
/// @instance: The %NtTypeInstance associated with this
/// @get_kind: Method for getting the kind of shader
/// @get_source: Method for getting the shader code
/// @get_binary: Method for getting the binary code
///
/// A shader
class _NtShader extends ffi.Struct {
  external _imp1.NtTypeInstance instance;

  external ffi.Pointer<
      ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<_NtShader>)>> get_kind;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<_NtShader>, ffi.Pointer<ffi.Size>)>> get_source;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<_NtShader>, ffi.Pointer<ffi.Size>)>> get_binary;
}

/// NtShader:
/// @instance: The %NtTypeInstance associated with this
/// @get_kind: Method for getting the kind of shader
/// @get_source: Method for getting the shader code
/// @get_binary: Method for getting the binary code
///
/// A shader
typedef NtShader = _NtShader;

/// NtRenderer:
/// @instance: The %NtTypeInstance associated with this
/// @is_software: Method for getting whether or not the renderer is doing software rendering
/// @get_config: Method for getting the renderer configuration for Flutter
/// @get_compositor: Method for getting the compositor for Flutter
/// @wait_sync: Method for causing the renderer to wait for synchronization
/// @render: Method for causing the renderer to perform the rendering action
/// @pre_render: Signal triggered before rendering begins
/// @post_render: Signal triggered once rendering is done
///
/// Base type for a renderer
class _NtRenderer extends ffi.Struct {
  external _imp1.NtTypeInstance instance;

  external ffi.Pointer<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<_NtRenderer>)>>
      is_software;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<FlutterRendererConfig> Function(
              ffi.Pointer<_NtRenderer>)>> get_config;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<FlutterCompositor> Function(
              ffi.Pointer<_NtRenderer>)>> get_compositor;

  external ffi.Pointer<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<_NtRenderer>)>>
      wait_sync;

  external ffi.Pointer<
      ffi.NativeFunction<ffi.Void Function(ffi.Pointer<_NtRenderer>)>> render;

  external ffi.Pointer<_imp1.NtSignal> pre_render;

  external ffi.Pointer<_imp1.NtSignal> post_render;

  /// < private >
  external ffi.Pointer<_NtRendererPrivate> priv;
}

typedef FlutterRendererConfig = _imp2.FlutterRendererConfig;
typedef FlutterCompositor = _imp2.FlutterCompositor;

class _NtRendererPrivate extends ffi.Opaque {}

/// NtSceneLayer:
/// @instance: The %NtTypeInstance associated with this
/// @render: Method for rendering
/// @clean: Method for cleaning
/// @priv: Private data
///
/// A layer in a scene for rendering
class _NtSceneLayer extends ffi.Struct {
  external _imp1.NtTypeInstance instance;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<_NtSceneLayer>, ffi.Pointer<_NtRenderer>)>> render;

  external ffi.Pointer<
      ffi.NativeFunction<ffi.Void Function(ffi.Pointer<_NtSceneLayer>)>> clean;

  /// < private >
  external ffi.Pointer<_NtSceneLayerPrivate> priv;
}

class _NtSceneLayerPrivate extends ffi.Opaque {}

/// NtScene:
/// @instance: The %NtTypeInstance associated with this
/// @priv: Private data
///
/// Scene for rendering layers
class _NtScene extends ffi.Struct {
  external _imp1.NtTypeInstance instance;

  /// < private >
  external ffi.Pointer<_NtScenePrivate> priv;
}

class _NtScenePrivate extends ffi.Opaque {}
